--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "fuse.js": "^7.0.0",
     "lucide-react": "^0.414.0",
     "next": "14.2.5",
     "puppeteer": "^22.13.1",
